Finished implementing preferences